# agentic-test-data-manager

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  FEATURES.md  Makefile  README.md  TODO.md  mypy.ini  pyproject.toml
.github/workflows/: ci.yml
apps/target-healthcare-api/: requirements.txt
apps/target-healthcare-api/app/: main.py
apps/target-healthcare-api/app/db/: session.py
apps/target-healthcare-api/app/models/: claim.py  codes.py  eligibility.py  member.py  plan.py  provider.py
apps/target-healthcare-api/app/repositories/: claim.py  codes.py  eligibility.py  member.py  plan.py  provider.py
apps/target-healthcare-api/app/reset/: snapshotter.py  strategies.py
apps/target-healthcare-api/app/routes/: member.py  plan.py  reset.py  scenarios.py
apps/target-healthcare-api/migrations/: 0001_init.sql
apps/target-healthcare-api/tests/: test_main.py
apps/test-data-agent/: requirements.txt
apps/test-data-agent/app/: main.py
apps/test-data-agent/app/agents/: planner.py
apps/test-data-agent/app/api/: audit.py  catalog.py  middleware.py  requests.py  reset.py  strategies.py
apps/test-data-agent/app/audit/: metrics.py  ui.py  writer.py
apps/test-data-agent/app/audit/templates/: audit_404.html  audit_run.html
apps/test-data-agent/app/catalog/: store.py
apps/test-data-agent/app/fixtures/: playwright.py  pytest_module.py
apps/test-data-agent/app/generators/: claim.py  codes.py  eligibility.py  member.py  names.py  plan.py  provider.py
apps/test-data-agent/app/scenarios/: active_member_clean.yaml  claim_denial_active_member.yaml  expired_eligibility.yaml  inactive_member_with_history.yaml  out_of_network_pending_claim.yaml  registry.py
apps/test-data-agent/app/seeders/: healthcare.py
apps/test-data-agent/app/validators/: __init__.py  domain.py  registry.py  relational.py  temporal.py
apps/test-data-agent/python/: pyproject.toml
apps/test-data-agent/python/atdm/: __init__.py  cli.py  client.py  pytest.py
apps/test-data-agent/python/tests/: test_cli.py  test_pytest_plugin.py
apps/test-data-agent/tests/: test_fixtures.py  test_generators.py  test_main.py  test_planner_modes.py  test_seeder.py  test_validators.py
automation/playwright/: package-lock.json  package.json  playwright.config.ts  take_audit_screenshot.mjs
automation/playwright/tests/: member.spec.ts
automation/pytest-api/: test_example_claim_denial.py  test_example_member.py
docs/: architecture.md  demo-script.md  design-decisions.md  development.md  healthcare-domain-model.md  recruiter-summary.md
docs/assets/: demo.cast
infra/: docker-compose.yml
planning/: PLAN.md
requirements/: BRD.md  README.md  concept.md  engineering-handoff.md
scripts/: demo.sh  measure_cold_start.sh
tests/: test_truth.py
tests/architecture/: test_audit_log_append_only.py  test_no_emoji.py  test_no_sql_from_agents.py
tests/integration/: conftest.py  test_member_repository.py  test_phase4_scenarios.py  test_phase5_resets.py  test_phase6_fixtures.py  test_phase7_cli_and_pytest.py  test_phase8_audit_ui.py  test_request_lifecycle.py  test_stack_up.py
