[project]
name = "agentic-test-data-manager"
version = "0.1.0"
description = "Agentic Test Data Manager: intent-to-data scenario provisioning for AI-assisted testing."
authors = [
    { name = "Nick Baynham", email = "nickbaynham@gmail.com" },
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = []

[project.urls]
Repository = "https://github.com/nickbaynham/agentic-test-data-manager"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
]

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [
    "data",
    "docs",
    "infra",
    "automation/playwright/node_modules",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # bugbear
    "UP",  # pyupgrade
    "SIM", # simplify
]

[tool.ruff.format]
quote-style = "double"

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = [
    "tests",
    "apps/test-data-agent/tests",
    "apps/target-healthcare-api/tests",
]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]

[tool.coverage.run]
branch = true
source = [
    "apps/test-data-agent/app",
    "apps/target-healthcare-api/app",
]

[tool.coverage.report]
show_missing = true
skip_empty = true
