[project]
name = "agentic-test-data-manager"
version = "0.1.0"
description = "Agentic Test Data Manager: intent-to-data scenario provisioning for AI-assisted testing."
authors = [
    { name = "Nick Baynham", email = "nickbaynham@gmail.com" },
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = []

[project.urls]
Repository = "https://github.com/nickbaynham/agentic-test-data-manager"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    # PDM expands ${PROJECT_ROOT} at install time, so this resolves correctly
    # on any machine including CI. (The pre-Phase-10 form was a hard-coded
    # /Users/... path that only worked on the dev host — see CHANGELOG
    # "Lessons learned" entry from 2026-05-21.)
    "-e file:///${PROJECT_ROOT}/apps/test-data-agent/python#egg=atdm-client",
]
[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [
    "data",
    "docs",
    "infra",
    "automation/playwright/node_modules",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # bugbear
    "UP",  # pyupgrade
    "SIM", # simplify
]

[tool.ruff.lint.isort]
known-first-party = ["app", "atdm"]

[tool.ruff.format]
quote-style = "double"

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
# Default testpaths only covers the top-level tests/ directory.
# Per-app tests under apps/<name>/tests/ MUST be invoked in separate pytest
# runs (see Makefile `test` target). Discovering both apps' tests in a single
# pytest run triggers the same duplicate-`app` module trap that mypy hit in
# Phase 0. Locked into planning/PLAN.md Phase 0 "Known pitfall".
testpaths = [
    "tests",
]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "integration: integration tests that require the docker compose stack to be running",
    "e2e: end-to-end tests that bring up and tear down the docker compose stack",
]
# pytest-asyncio configuration. "auto" mode marks every `async def test_...`
# automatically; no need to decorate each one.
asyncio_mode = "auto"

[tool.coverage.run]
branch = true
source = [
    "apps/test-data-agent/app",
    "apps/target-healthcare-api/app",
]

[tool.coverage.report]
show_missing = true
skip_empty = true

[dependency-groups]
dev = [
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "fastapi<0.120,>=0.115",
    "uvicorn[standard]<0.40,>=0.32",
    "asyncpg<0.32,>=0.30",
    "pytest-asyncio<0.27,>=0.24",
    "asyncpg-stubs<1,>=0.30",
    "python-ulid>=3",
    "pyarrow<21,>=18",
    "minio>=7.2",
    "pyyaml>=6.0",
    "types-PyYAML>=6.0.12.20260518",
    "typer<1,>=0.12",
    "jinja2>=3.1",
    "prometheus-client>=0.20",
    "pre-commit>=4.0",
]
